--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body {
   margin-left: 4em;
   font-family: "Open Sans";
   font-size: 1rem;
+  width: 320px;
+  padding: 10px;
+  margin: 0;
 }
 
 h1 {
