--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   font-size: 1rem;
   width: 1000px;
   padding: 20px;
+  text-align: center;
 }
 
 h1 {
@@ -17,7 +18,11 @@ blockquote {
   font-family: 'Roboto Slab";
     font-size: 1.25rem;
 }
-#buttons {
+href="http" {
+    border: 2px solid grey;
+  border-radius: 5px;
+}
+href="https" {
     border: 2px solid grey;
   border-radius: 5px;
 }
