--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 h1 {
   font-family: "Roboto Slab";
     font-size: 2rem;
+  color: #9f2042;
 }
 blockquote {
   font-family: 'Roboto Slab";
