--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ href="https" {
   border-radius: 5px;
 }
 footer {
-  backgroung color: #29293a;
+  background-color: #29293a;
 }
 #buttons a:hover {
   background-color: #a9a9ba;
