--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ blockquote {
 a[href^="http:"] {
     border: 2px solid grey;
   border-radius: 5px;
-  padding-bottom: 1rem;
+  padding: 10px;
   background-color: #a9a9ba;
   color: #9f2042;
 }
@@ -50,6 +50,6 @@ a href="#"{
   width: 100vw;
 }
 img {
- width : 100%;
- height: 100%; 
+ width : 50%;
+ height: 50%; 
 }
