--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,10 @@ h1 {
   color: #9f2042;
 }
 blockquote {
-  font-family: 'Roboto Slab";
+  font-family: "Roboto Slab";
     font-size: 1.25rem;
   background-color: #ececec;
-  color: #f9f9f9
+  color: #f9f9f9;
     border: 2px solid grey;
   border-radius: 5px;
   padding: 10px;
