--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ h1 {
 blockquote {
   font-family: "Roboto Slab";
     font-size: 1.25rem;
-  background-color: #ececec;
-  color: #f9f9f9;
+  background-color: #f9f9f9;
+  color: #ececec;
     border: 2px solid grey;
   border-radius: 5px;
   padding: 10px;
